--- a/an_app/templates/index.html
+++ b/an_app/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image: url('../static/image/bg.jpg');
+{% load static %}
+<html lang="en" style="background-image: url('{% static "image/bg.jpg"%}');
 background-attachment: fixed;">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
